# SpatialAgingClock

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
spatial_aging_clock/: __init__.py  develop.py  proximity.py
spatial_aging_clock/clocks/: lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_Macrophage.pkl  lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_Neuron-MSN.pkl  lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_VLMC.pkl  lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_VSMC.pkl
spatialclock/: __init__.py  deploy.py  proximity.py  utils.py
spatialclock/clocks/: lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_Astrocyte.pkl  lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_B cell.pkl  lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_Endothelial.pkl  lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_Ependymal.pkl  lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_Microglia.pkl  lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_NSC.pkl  lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_Neuroblast.pkl  lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_Neuron-Excitatory.pkl  lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_Neuron-Inhibitory.pkl  lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_Neutrophil.pkl  lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_OPC.pkl  lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_Oligodendrocyte.pkl  lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_Pericyte.pkl  lasso_cv5_nalphas20_spatialsmooth_alpha08_neigh20_T cell.pkl
(+18 files in other folders)
