[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spatial-aging-clock"
authors = [{name = "Eric Sun", email = "edsun97@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
				"squidpy>=1.1.2",
				"anndata>=0.8.0",
				"scanpy>=1.9.1",
				]

[project.urls]
Home = "https://github.com/sunericd/SpatialAgingClock"

[tool.flit.module]
name = "spatialclock"